# whoop

./: CMakeLists.txt  whoop.c  whoop.h
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  whoop.c
src/include/: CMakeLists.txt  barrier.h  buffer.h  cli.h  config.h.in  daemon.h  http.h  msg.h  network.h
src/lib/: CMakeLists.txt
src/lib/barrier/: CMakeLists.txt  _barrier.h  barrier_destroy.c  barrier_init.c  barrier_wait.c
src/lib/cli/: CMakeLists.txt  _cli.h  cli.c  help.c  init.c  new.c  version.c
src/lib/daemon/: CMakeLists.txt  _daemon.h  daemon.c  signal.c
src/lib/http/: CMakeLists.txt  _http.h
src/lib/msg/: CMakeLists.txt  _msg.h  msg.c
src/lib/network/: CMakeLists.txt  _network.h  readline.c  readn.c  tcp_connect.c  tcp_listen.c  writen.c
src/test/: CMakeLists.txt
src/test/daemon/: CMakeLists.txt  daemon-test.c
src/test/msg/: CMakeLists.txt  msg-test.c
src/test/network/: CMakeLists.txt  _testnw.h  handle-client.c  srv-stats.c  test-client.c  test-server.c
